fix(android): make the Tauri app compile for the Android target again